--- a/beta/tiri.html
+++ b/beta/tiri.html
@@ -15,7 +15,7 @@
     </div>
     <div style="text-align: right">
       <button onclick="window.location.href = 'index.html';" class="ttype"> Tiri<br/>Type</button><br/>
-    </div
+    </div>
     <center>
       <h3 id="user"></h2>
       <h1 id="tiri"></h1>
@@ -98,9 +98,10 @@
     }
     
     .button span:after {
-      position: absolute;
-      opacity: 0;
-      top: 0;
+      transition: 0.5s;
+    }
+    
+    .button span {
       transition: 0.5s;
     }
   </style>
