--- a/beta/tiri.html
+++ b/beta/tiri.html
@@ -14,7 +14,7 @@
       <button onclick="window.location.href = 'index.html';" class="bbutton"><span> Back </span></button>
     </div>
     <div style="text-align: right">
-      <button onclick="window.location.href = 'index.html';" class="ttype"> Tiri<br/>Type</button><br/>
+      <button onclick="tiriType" class="ttype"> Tiri Type</button><br/>
     </div>
     <center>
       <h3 id="user"></h2>
