--- a/beta/tiri.html
+++ b/beta/tiri.html
@@ -14,7 +14,7 @@
       <button onclick="window.location.href = 'index.html';" class="bbutton"><span> Back </span></button>
     </div>
     <div style="text-align: right">
-      <button onclick="type()" class="ttype"> Tiri Type </button><br/>
+      <button onclick="tt()" class="ttype"> Tiri Type </button><br/>
     </div>
     <center>
       <h3 id="user"></h2>
@@ -29,7 +29,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="speech.js"></script>
     <script>
-      function type() {
+      function tt() {
         
          localStorage.us = prompt("Welcome to Tiri Type");
         
