--- a/beta/index.html
+++ b/beta/index.html
@@ -43,6 +43,7 @@
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
+          <a href="index.html?app=5"><span class="glyphicon glyphicon-volume-up"></span></span>
           <center>
            <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
           </center>
