--- a/beta/index.html
+++ b/beta/index.html
@@ -45,6 +45,7 @@
           </ul>
           <center>
            <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta</b></a>
+           <a class="navbar-brand" href="index.html?app=5">Tiri <b>Type</b></a>
           </center>
           <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
             <li><a href="logout.html"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
