--- a/reward.html
+++ b/reward.html
@@ -10,6 +10,7 @@
 var points = localStorage.points;
 var points = Number(points) + 10;
 localStorage.points = points;
+storeInDatabase("points", localStorage.points")
 window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
 </script>
 </html>
