--- a/beta/index.html
+++ b/beta/index.html
@@ -39,12 +39,14 @@
               </ul>
             </li>
           </ul>
+          <center>
+          <a class="navbar-brand" href="index.html?app=5">Tiri     </a>
+          </center>
           <ul id="login" class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
           <center>
-           <a class="navbar-brand" href="index.html?app=5">  Tiri    </a>
            <a class="navbar-brand" href="index.html">TiMedia <b>2 Beta </b></a>
           </center>
           <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
