--- a/beta/index.html
+++ b/beta/index.html
@@ -39,7 +39,9 @@
               </ul>
             </li>
           </ul>
-          <a class="navbar-brand" href="index.html?app=5">     Tiri  </a>
+          <ul id="tiri-link" class="navbar-nav nabar-center>
+          <li> <a class="navbar-brand" href="index.html?app=5">     Tiri  </a></li>
+                                                              </ul>
           <ul id="login" class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
