--- a/beta/index.html
+++ b/beta/index.html
@@ -40,7 +40,7 @@
             </li>
           </ul>
           <ul id="tiri-link" class="navbar-nav nabar-center>
-          <li> <a class="navbar-brand" href="index.html?app=5">     Tiri  </a></li>
+          <a class="navbar-brand" href="index.html?app=5">     Tiri  </a>
                                                               </ul>
           <ul id="login" class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
