--- a/beta/index.html
+++ b/beta/index.html
@@ -242,6 +242,7 @@ function alertAds() {
         <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
         <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br><br>
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
+        <button onclick="lastTile()" class="btn btn-danger">Open The Last Opened Tile</button><br>
        </div>
   </div>
   
