--- a/beta/index.html
+++ b/beta/index.html
@@ -247,8 +247,8 @@ function alertAds() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
   </div>
-  
-    <div id="tiles" style="display: none;">
+  <div id="tiles-bar" style="display: none;"></div>
+  <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><button onclick="searchFiles()" class="btn btn-primary">Search</button>
