--- a/beta/index.html
+++ b/beta/index.html
@@ -337,6 +337,7 @@ function alertAds() {
     <script src="tiles.js"></script>
     <script src="slides.js"></script>
     <script src="speech.js"></script>
+    <script src="tiles-progress.js"></script>
     </div>
   </body>
 </html>
