--- a/beta/index.html
+++ b/beta/index.html
@@ -338,6 +338,7 @@ function alertAds() {
     <script src="slides.js"></script>
     <script src="speech.js"></script>
     <script src="tiles-progress.js"></script>
-    </div>
+    <script src="progressbar.js"></script>
+   </div>
   </body>
 </html>
