--- a/beta/index.html
+++ b/beta/index.html
@@ -247,7 +247,7 @@ function alertAds() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
   </div>
-  <div id="container" style="display: none;"></div>
+  <div id="container" style="display: none; text-align: center;"></div>
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
