--- a/beta/index.html
+++ b/beta/index.html
@@ -251,7 +251,7 @@ function alertAds() {
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
-      <input class="form-control" type="text" id="TiFilesSearch"><button onclick="searchFiles()" class="btn btn-primary">Search</button>
+      <input class="form-control" type="text" id="TiFilesSearch" width="80%" ><button onclick="searchFiles()" class="btn btn-primary">Search</button>
       <ul class="btn btn-primary" style="list-style: none;">
         <li class="dropdown">
               <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
