--- a/beta/index.html
+++ b/beta/index.html
@@ -247,7 +247,9 @@ function alertAds() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
   </div>
+  <center>
   <div id="container" style="display: none;" align="center"></div>
+  </center>
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
