--- a/beta/index.html
+++ b/beta/index.html
@@ -318,27 +318,27 @@ function alertAds() {
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-    <script src="tiri.js"></script>
-    <script src="jscolor.js"></script>
+    <script src="/js/tiri.js"></script>
+    <script src="/js/jscolor.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    <script src="home.js"></script>
-    <script src="main.js"></script>
-    <script src="docs.js"></script>
-    <script src="sheets.js"></script>
-    <script src="points.js"></script>
-    <script src="db.js"></script>
-    <script src="messages.js"></script>
-    <script src="new.js"></script>
-    <script src="contacts.js"></script>
-    <script src="settings.js"></script>
-    <script src="tiles.js"></script>
-    <script src="slides.js"></script>
-    <script src="speech.js"></script>
-    <script src="progressbar.js"></script>
-    <script src="tiles-progress.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/docs.js"></script>
+    <script src="/js/sheets.js"></script>
+    <script src="/js/points.js"></script>
+    <script src="/js/db.js"></script>
+    <script src="/js/messages.js"></script>
+    <script src="/js/new.js"></script>
+    <script src="/js/contacts.js"></script>
+    <script src="/js/settings.js"></script>
+    <script src="/js/tiles.js"></script>
+    <script src="/js/slides.js"></script>
+    <script src="/js/speech.js"></script>
+    <script src="/js/progressbar.js"></script>
+    <script src="/js/tiles-progress.js"></script>
    </div>
   </body>
 </html>
