--- a/beta/index.html
+++ b/beta/index.html
@@ -33,7 +33,8 @@
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                  <!--<li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>-->
-                     <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+                <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+                <li><a href="?app=10">TiPay <span class="glyphicon glyphicon-credit-card"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li> 
               </ul>
@@ -313,6 +314,9 @@ function alertAds() {
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<div id="tipay" style="display: none;">
+  <h3>TiPay</h3>
+</div>
 </div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
