--- a/beta/tipaybutton.html
+++ b/beta/tipaybutton.html
@@ -37,6 +37,6 @@ function pay() {
   }
 }
 </script>
-<button style="width: 150px; height: 35px;" class="btn btn-primary" onclick="pay()">Pay with TiPay</button>
+<button style="width: 150px; height: 35px; font-size: 16px;" class="btn btn-primary" onclick="pay()">Pay with TiPay</button>
 </body>
 </html>
