--- a/beta/tipaybutton.html
+++ b/beta/tipaybutton.html
@@ -39,6 +39,6 @@ function pay() {
 }
 </script>
 <button style="width: 150px; height: 35px; font-size: 16px;" class="btn btn-primary" onclick="pay()">Pay with TiPay</button>
-  <script src="db.js"></script>
+  <script src="js/db.js"></script>
 </body>
 </html>
