--- a/reward.html
+++ b/reward.html
@@ -13,4 +13,5 @@ localStorage.points = points;
 storeInDatabase("points", localStorage.points)
 window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
 </script>
+  <script src="beta/js/db.js"></script>
 </html>
