--- a/reward.html
+++ b/reward.html
@@ -14,4 +14,5 @@ storeInDatabase("points", localStorage.points)
 window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
 </script>
   <script src="beta/js/db.js"></script>
+  <script src="beta/js/home.js"></script>
 </html>
