--- a/beta/logout.html
+++ b/beta/logout.html
@@ -1,4 +1,6 @@
 <script>
+  storeInDatabase("points", localStorage.points)
   window.localStorage.clear();
   window.location.href = "login.html";
 </script>
+<script src="beta/js/db.js"></script>
