--- a/beta/logout.html
+++ b/beta/logout.html
@@ -3,4 +3,4 @@
   window.localStorage.clear();
   window.location.href = "login.html";
 </script>
-<script src="beta/js/db.js"></script>
+<script src="js/db.js"></script>
