--- a/reward.html
+++ b/reward.html
@@ -10,7 +10,7 @@
 var points = localStorage.points;
 var points = Number(points) + 10;
 localStorage.points = points;
- window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
+ window.location.href = "https://proudloyaltier.github.io/timedia/beta/index.html";
 </script>
   <script src="beta/js/db.js"></script>
   <script src="beta/js/home.js"></script>
