--- a/beta/index.html
+++ b/beta/index.html
@@ -345,6 +345,7 @@ function alertAds() {
     <script src="js/speech.js"></script>
     <script src="js/progressbar.js"></script>
     <script src="js/tiles-progress.js"></script>
+    <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
    </div>
   </body>
 </html>
