--- a/beta/index.html
+++ b/beta/index.html
@@ -322,6 +322,7 @@ function alertAds() {
 </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+    <script src="js/sound.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="js/tiri.js"></script>
     <script src="js/jscolor.js"></script>
@@ -344,8 +345,7 @@ function alertAds() {
     <script src="js/slides.js"></script>
     <script src="js/speech.js"></script>
     <script src="js/progressbar.js"></script>
-    <script src="js/tiles-progress.js"></script>
-    <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
+  <script src="js/tiles-progress.js"></script>
    </div>
   </body>
 </html>
