--- a/beta/tipaybutton.html
+++ b/beta/tipaybutton.html
@@ -32,9 +32,10 @@ function pay() {
   
   if (paymessage) {
     localStorage.points = localStorage.points - amount;
-    storeInDatabase("points", localStorage.points)
+    localStorage.savePoints = true;
     alert("Purchase completed.");
     eval(code);
+    window.location.href = "?app=1";
   }
 }
 </script>
