--- a/beta/tipaybutton.html
+++ b/beta/tipaybutton.html
@@ -35,7 +35,7 @@ function pay() {
     localStorage.savePoints = true;
     alert("Purchase completed.");
     eval(code);
-    window.location.href = "?app=1";
+    window.location.href = "index.html?app=1";
   }
 }
 </script>
