--- a/beta/index.html
+++ b/beta/index.html
@@ -120,7 +120,8 @@ function alertAds() {
     </div>
     <center>
       <h3 id="user"></h2>
-      <h1 id="tiri"></h1>
+      <h1 id="tiri"></h1><br>
+      <input class="form-control input-lg" id="inputlg" type="text">
     </center>
      <style>
     #user {
