--- a/beta/index.html
+++ b/beta/index.html
@@ -118,7 +118,7 @@ function alertAds() {
     <center>
       <h3 id="user"></h2>
       <h1 id="tiri"></h1><br>
-      <input class="form-control input-lg" id="inputlg" type="text" onchange="tt()">
+      <input class="form-control input-lg" id="inputlg" type="text" id="tiri-box" onchange="tt()">
     </center>
      <style>
     #user {
@@ -129,7 +129,6 @@ function alertAds() {
       color: black;
       font-size: 50px;
     }
-    
     
     .bbutton {
       align: left;
