--- a/beta/index.html
+++ b/beta/index.html
@@ -111,7 +111,7 @@ function alertAds() {
 
 </div>
   
-    <input id="chat" class="form-control" style="display: none;"><br>
+    <input id="chat" class="form-control" style="display: none;" autofocus><br>
     <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Create/Join Chat</button>
 
   <div style="display: none" id="tiritype">
