--- a/beta/index.html
+++ b/beta/index.html
@@ -117,7 +117,7 @@ function alertAds() {
   <div style="display: none" id="tiritype">
     <center>
       <h1 id="tiri"></h1><br>
-      <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()">
+      <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" autofocus>
     </center>
      <style>
     #user {
