--- a/reward.html
+++ b/reward.html
@@ -10,6 +10,7 @@
 var points = localStorage.points;
 var points = Number(points) + 10;
 localStorage.points = points;
+ localStorage.newpoints = localStorage.points;
  window.location.href = "https://proudloyaltier.github.io/timedia/beta/index.html?app=1";
 </script>
 </html>
