--- a/beta/tipaybutton.html
+++ b/beta/tipaybutton.html
@@ -35,6 +35,7 @@ function pay() {
     alert("Purchase completed.");
     eval(code);
     window.location.href = "index.html?app=1";
+    save();
   }
 }
 </script>
