--- a/reward.html
+++ b/reward.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
  <html>
 <head>
 <title>Points Loading . . .</title>
@@ -11,5 +11,6 @@ var points = localStorage.points;
 var points = Number(points) + 10;
 localStorage.points = points;
  window.location.href = "https://proudloyaltier.github.io/timedia/beta/index.html?app=1";
+ save();
 </script>
 </html>
