--- a/beta/index.html
+++ b/beta/index.html
@@ -32,6 +32,7 @@
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li> 
               </ul>
             </li>
