--- a/beta/index.html
+++ b/beta/index.html
@@ -267,6 +267,7 @@ setInterval(changeName, 50)
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+    <script src="js/math.min.js"></script>
     <script src="js/tiri.js"></script>
     <script src="js/jscolor.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
