--- a/beta/index.html
+++ b/beta/index.html
@@ -93,7 +93,7 @@ setInterval(changeName, 50)
   <div style="display: none" id="tiritype">
     <center>
       <h1 id="tiri"></h1><br>
-      <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" autofocus>
+      <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" placeholder="Type here or speak to Tiri." autofocus>
     </center>
      <style>
     #user {
