--- a/beta/index.html
+++ b/beta/index.html
@@ -265,6 +265,7 @@ setInterval(changeName, 50)
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%241cBPdywnZwFwXIAZ07xVL%2F"+"&opts=16862&num=10&ts=1510271141987");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
 </div>
+</div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
