--- a/beta/index.html
+++ b/beta/index.html
@@ -266,7 +266,7 @@ setInterval(changeName, 50)
 </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
-    <script src="js/annyang.min.js"></script>
+    <script src="js/annyang.js"></script>
     <script src="js/math.min.js"></script>
     <script src="js/tiri.js"></script>
     <script src="js/jscolor.js"></script>
