--- a/beta/index.html
+++ b/beta/index.html
@@ -286,7 +286,8 @@ setInterval(changeName, 50)
     <script src="js/slides.js"></script>
     <script src="js/speech.js"></script>
     <script src="js/progressbar.js"></script>
-  <script src="js/tiles-progress.js"></script>
+    <script src="js/tiles-progress.js"></script>
+    <script src="js/sound.js"></script>
    </div>
   </body>
 </html>
