--- a/beta/index.html
+++ b/beta/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -286,7 +287,6 @@ setInterval(changeName, 50)
     <script src="js/speech.js"></script>
     <script src="js/progressbar.js"></script>
     <script src="js/tiles-progress.js"></script>
-    <script src="js/sound.js"></script>
    </div>
   </body>
 </html>
