--- a/beta/index.html
+++ b/beta/index.html
@@ -161,7 +161,7 @@ setInterval(changeName, 50)
 
       <button onclick="saveBookmark()" class="btn btn-primary">Save</button>
   </div>
-<h4 style="display: none;" id="view"></h4><br>
+<h4 style="display: none;" id="viewBookmark"></h4><br>
 <button id="tibookmarks-edit" style="display: none;" onclick="editBookmark()" class="btn btn-primary">Edit</button>
 </div>
 
