--- a/beta/index.html
+++ b/beta/index.html
@@ -299,6 +299,7 @@ setInterval(changeName, 50)
     <script src="js/speech.js"></script>
     <script src="js/progressbar.js"></script>
     <script src="js/tiles-progress.js"></script>
+    <script src="js/bookmarks.js"></script>
    </div>
   </body>
 </html>
