--- a/beta/index.html
+++ b/beta/index.html
@@ -220,7 +220,7 @@ setInterval(changeName, 50)
                 <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a href="index.html?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
                 <!-- <li><a href="index.html?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li> -->
-                <li><a onclick="index.html?app=10">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
+                <li><a href="index.html?app=10">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
                 <li><a onclick="saveChat()">Save A Chat <span class="glyphicon glyphicon-send"></span></a></li>
               </ul>
             </li>
