--- a/beta/login.html
+++ b/beta/login.html
@@ -22,7 +22,7 @@
           </button>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
-          <a class="navbar-brand" href="#">TiMedia <b>2 Beta</b></a>
+          <a class="navbar-brand" href="#">TiMedia <b>2</b></a>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           </ul>
