--- a/beta/index.html
+++ b/beta/index.html
@@ -163,6 +163,7 @@ setInterval(changeName, 50)
   </div>
 <h4 style="display: none;" id="viewBookmark"></h4><br>
 <button id="tibookmarks-edit" style="display: none;" onclick="editBookmark()" class="btn btn-primary">Edit</button>
+<button id="tibookmarks-open" style="display: none;" onclick="openBookmark()" class="btn btn-primary">Open Bookmark</button>
 </div>
 
   <div style="display: none;" id="newapp">
