--- a/beta/index.html
+++ b/beta/index.html
@@ -300,6 +300,7 @@ setInterval(changeName, 50)
     <script src="js/progressbar.js"></script>
     <script src="js/tiles-progress.js"></script>
     <script src="js/bookmarks.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
    </div>
   </body>
 </html>
