--- a/beta/index.html
+++ b/beta/index.html
@@ -271,6 +271,7 @@ setInterval(changeName, 50)
   <button class="btn btn-primary" onclick="addText()">Add Text</button>
 </div>
 </div>
+</div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="js/annyang.js"></script>
