--- a/beta/index.html
+++ b/beta/index.html
@@ -212,7 +212,7 @@ setInterval(changeName, 50)
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
-      <input class="form-control" type="text" id="TiFilesSearch" width="80%" ><button onclick="searchFiles()" class="btn btn-primary">Search</button>
+      <input class="form-control" type="text" id="TiFilesSearch" width="80%"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
       <ul class="btn btn-primary" style="list-style: none;">
         <li class="dropdown">
               <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
@@ -225,9 +225,9 @@ setInterval(changeName, 50)
               </ul>
             </li>
       </ul>
-      <button onclick="save()" class="btn btn-primary">Save Your Changes</button><br>
+      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
       <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br>
-        <div id="tiles-tiles">
+       <div id="tiles-tiles">
        You have no Tiles.
        </div>
   </div>
