--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ setInterval(changeName, 50)
       </ul>
       <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
       <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br>
-       <div id="tiles-tiles">
-       You have no Tiles.
+       <div id="tiles-tiles" style="list-style: none;">
+         You have no Tiles.
        </div>
   </div>
  <div id="tisheets" style="display: none;">
