--- a/index.html
+++ b/index.html
@@ -230,9 +230,10 @@ setInterval(changeName, 50)
        <div id="tiles-tiles" style="list-style: none;">
          You have no Tiles.
        </div><br><br>
-    
-    <b>NEW!</b> You can now add a bookmark Tile just by clicking on this in your browser. Just drag this link to your browser.<br>
-    <a href='javascript:window.location.href="https://proudloyaltier.github.io/timedia?app=7&bookmarktitle="+btoa(document.title)+"&bookmarkurl="+btoa(window.location.href);'>Bookmark on Tiles</a>
+    <div class="container">
+      <b>NEW!</b> You can now add a bookmark Tile just by clicking on this in your browser. Just drag this link to your browser.<br>
+      <a href='javascript:window.location.href="https://proudloyaltier.github.io/timedia?app=7&bookmarktitle="+btoa(document.title)+"&bookmarkurl="+btoa(window.location.href);'>Bookmark on Tiles</a>
+    </div>
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
