--- a/beta/index.html
+++ b/beta/index.html
@@ -226,7 +226,7 @@ setInterval(changeName, 50)
             </li>
       </ul>
       <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
-      <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br>
+      <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br><br>
        <div id="tiles-tiles" style="list-style: none;">
          You have no Tiles.
        </div>
