--- a/beta/index.html
+++ b/beta/index.html
@@ -230,6 +230,8 @@ setInterval(changeName, 50)
        <div id="tiles-tiles" style="list-style: none;">
          You have no Tiles.
        </div>
+       <div id="tiles-searchbox" style="list-style: none;">
+       </div>
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
