--- a/beta/index.html
+++ b/beta/index.html
@@ -212,7 +212,7 @@ setInterval(changeName, 50)
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File Name<br>
-      <input class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%"><br>
+      <input class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><br>
       <ul class="btn btn-primary" style="list-style: none;">
         <li class="dropdown">
               <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
@@ -230,7 +230,7 @@ setInterval(changeName, 50)
        <div id="tiles-tiles" style="list-style: none;">
          You have no Tiles.
        </div>
-       <div id="tiles-searchbox" style="list-style: none;">
+       <div id="tiles-searchbox" style="list-style: none; display: none;">
        </div>
   </div>
  <div id="tisheets" style="display: none;">
