--- a/beta/index.html
+++ b/beta/index.html
@@ -34,6 +34,11 @@
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                 <li role="separator" class="divider"></li>
+                <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
+                <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
+                <li><a href="?app=9">TiSlides <span class="glyphicon glyphicon-blackboard"></span></a></li>
+                <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li> 
               </ul>
             </li>
