--- a/beta/index.html
+++ b/beta/index.html
@@ -232,7 +232,7 @@ setInterval(changeName, 50)
             </li>
       </ul>
 -->
-      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
+      <button onclick="save()" class="btn btn-primary">Save Tiles</button>
       <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br><br>
        <div id="tiles-tiles" style="list-style: none;">
          You have no Tiles.
